# mpd-discord-rpc

./: CMakeLists.txt  README.md  install.sh
src/: discord.c  discord.h  main.c  mpdclient.c  mpdclient.h
